fix banner bugs on mobile devices

--- a/src/components/Home/banner/index.module.scss
+++ b/src/components/Home/banner/index.module.scss
@@ -16,81 +16,163 @@
         }
     }
 
-    animation: cloud (5s * $index) infinite linear
+    animation: cloud (3s * $index) infinite linear
 }
 
-.banner {
-    width              : 100%;
-    height             : 100vh;
-    position           : relative;
-    background-image   : url(./Island.jpg);
-    background-repeat  : no-repeat;
-    background-size    : cover;
-    background-position: bottom;
-    display            : flex;
-    justify-content    : center;
-    align-items        : center;
+@media screen and (max-width: 400px) {
+    .banner {
+        width              : 100%;
+        height             : 100vh;
+        position           : relative;
+        background-image   : url(./Island.jpg);
+        background-repeat  : no-repeat;
+        background-size    : cover;
+        background-position: bottom;
+        display            : flex;
+        justify-content    : center;
+        align-items        : center;
 
-    #welcome {
-        font-size: 8em;
-        color    : #fff;
 
-    }
-
-    .clouds {
-        overflow      : hidden;
-        position      : absolute;
-        left          : 0;
-        top           : 0;
-        width         : 100%;
-        height        : 100%;
-        pointer-events: none;
-
-        :nth-child(1) {
-            @include cloud-animation(1);
-        }
-
-        :nth-child(2) {
-            @include cloud-animation(2);
-        }
-
-        :nth-child(3) {
-            @include cloud-animation(3);
-        }
-
-        :nth-child(4) {
-            @include cloud-animation(4);
-        }
-
-        :nth-child(5) {
-            @include cloud-animation(5);
-        }
-
-        :nth-child(6) {
-            @include cloud-animation(10);
-        }
-
-        :nth-child(7) {
-            @include cloud-animation(9);
-        }
-
-        :nth-child(8) {
-            @include cloud-animation(8);
-        }
-
-        :nth-child(9) {
-            @include cloud-animation(7);
-        }
-
-        :nth-child(10) {
-            @include cloud-animation(6);
-        }
-
-        img {
-            position : absolute;
-            bottom   : 0;
+        #welcome {
+            font-size: 4rem;
+            color    : #fff;
             max-width: 100%;
         }
-    }
 
+        .clouds {
+            overflow      : hidden;
+            position      : absolute;
+            left          : 0;
+            top           : 0;
+            width         : 100%;
+            height        : 100%;
+            pointer-events: none;
+
+            :nth-child(1) {
+                @include cloud-animation(1);
+            }
+
+            :nth-child(2) {
+                @include cloud-animation(2);
+            }
+
+            :nth-child(3) {
+                @include cloud-animation(3);
+            }
+
+            :nth-child(4) {
+                @include cloud-animation(4);
+            }
+
+            :nth-child(5) {
+                @include cloud-animation(5);
+            }
+
+            :nth-child(6) {
+                @include cloud-animation(10);
+            }
+
+            :nth-child(7) {
+                @include cloud-animation(9);
+            }
+
+            :nth-child(8) {
+                @include cloud-animation(8);
+            }
+
+            :nth-child(9) {
+                @include cloud-animation(7);
+            }
+
+            :nth-child(10) {
+                @include cloud-animation(6);
+            }
+
+            img {
+                position : absolute;
+                bottom   : 0;
+                max-width: 100%;
+            }
+        }
+
+    }
+}
+
+@media screen and (max-width: 2440px) and (min-width: 400px) {
+    .banner {
+        width              : 100%;
+        height             : 100vh;
+        position           : relative;
+        background-image   : url(./Island.jpg);
+        background-repeat  : no-repeat;
+        background-size    : cover;
+        background-position: bottom;
+        display            : flex;
+        justify-content    : center;
+        align-items        : center;
+
+
+        #welcome {
+            font-size: 8rem;
+            color    : #fff;
+            max-width: 100%;
+        }
+
+        .clouds {
+            overflow      : hidden;
+            position      : absolute;
+            left          : 0;
+            top           : 0;
+            width         : 100%;
+            height        : 100%;
+            pointer-events: none;
+
+            :nth-child(1) {
+                @include cloud-animation(1);
+            }
+
+            :nth-child(2) {
+                @include cloud-animation(2);
+            }
+
+            :nth-child(3) {
+                @include cloud-animation(3);
+            }
+
+            :nth-child(4) {
+                @include cloud-animation(4);
+            }
+
+            :nth-child(5) {
+                @include cloud-animation(5);
+            }
+
+            :nth-child(6) {
+                @include cloud-animation(10);
+            }
+
+            :nth-child(7) {
+                @include cloud-animation(9);
+            }
+
+            :nth-child(8) {
+                @include cloud-animation(8);
+            }
+
+            :nth-child(9) {
+                @include cloud-animation(7);
+            }
+
+            :nth-child(10) {
+                @include cloud-animation(6);
+            }
+
+            img {
+                position : absolute;
+                bottom   : 0;
+                max-width: 100%;
+            }
+        }
+
+    }
 }
